feat: add model percentages by center endpoint
